add interactive code of self-defined scenario

--- a/mgt_app/performance/templates/self-defined.html
+++ b/mgt_app/performance/templates/self-defined.html
@@ -108,7 +108,7 @@ body {
 				</div>
 				<div class="layui-form-item">
 					<div class="layui-input-block">
-						<button type="submit" class="layui-btn" lay-filter="formDemo" lay-submit>Create</button>
+						<button type="submit" class="layui-btn" lay-filter="selfDefined" lay-submit>Create</button>
 <!--						<button type="reset" class="layui-btn" >重置</button>-->
 					</div>
 				</div>
@@ -148,9 +148,11 @@ body {
 	src="{{url_for('static',filename='personal/js/JQuery.js')}}"></script>
 <script src="{{ url_for('static',filename='layui/layui.all.js') }}"></script>
 <script src="{{ url_for('static',filename='layui/dist/xm-select.js') }}"></script>
-<script src="{{ url_for('static',filename='personal/js/select-format.js') }}"></script>
+<script src="{{ url_for('static',filename='personal/js/multiple-select.js') }}"></script>
 <script type="text/javascript"
 	src="{{url_for('static',filename='personal/js/input-format.js')}}"></script>
+<script type="text/javascript"
+	src="{{url_for('static',filename='personal/js/self-defined.js')}}"></script>
 
 
 <!--<script type="text/javascript"-->
