add interactive code of performance scenario

--- a/mgt_app/performance/templates/video.html
+++ b/mgt_app/performance/templates/video.html
@@ -90,7 +90,7 @@ body {
 				</div>
 				<div class="layui-form-item">
 					<div class="layui-input-block">
-						<button type="submit" class="layui-btn" lay-filter="formDemo" lay-submit>Create</button>
+						<button type="submit" class="layui-btn" lay-filter="video" lay-submit>Create</button>
 					</div>
 				</div>
 			</form>
@@ -104,33 +104,12 @@ body {
 			</div>
 		</div>
 	</div>
-<!--</body>-->
-<!--  
-<script type="text/html" id="toolbarDemo">
-  <div class="layui-btn-container">
-    <button class="layui-btn layui-btn-sm" lay-event="getCheckData">获取选中数据</button>
- <button class="layui-btn layui-btn-sm" lay-event="getCheckLength">获取选中数目</button>
-    <button class="layui-btn layui-btn-sm" lay-event="isAll">验证是否全选</button> 
-  </div>
-</script>
-
-<script type="text/html" id="barDemo">
- <a class="layui-btn  layui-btn-xs" lay-event="detail">查看</a>
-  <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit">编辑</a>
-  <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-	</script>
-<script type="text/html" id="barDemo1">
- <a class="layui-btn  layui-btn-xs" lay-event="detail">查看</a>
-  <a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="edit">编辑</a>
-  <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
-	</script>
--->
 <script type="text/javascript"
 	src="{{url_for('static',filename='personal/js/JQuery.js')}}"></script>
 <script src="{{ url_for('static',filename='layui/layui.all.js') }}"></script>
 <script type="text/javascript"
-	src="{{url_for('static',filename='personal/js/input-format.js')}}"></script>
-<!--<script type="text/javascript"-->
-<!--	src="{{url_for('static',filename='personal/js/performance-table.js')}}"></script>-->
+	src="{{url_for('static',filename='personal/js/basic-sundry.js')}}"></script>
+<script type="text/javascript"
+	src="{{url_for('static',filename='personal/js/video.js')}}"></script>
 </body>
 </html>
