Code optimization and add tips of performance scenario

--- a/mgt_app/performance/templates/random-rw.html
+++ b/mgt_app/performance/templates/random-rw.html
@@ -1,115 +1,188 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<link href="{{url_for('static',filename='layui/css/layui.css')}}"
-	rel="stylesheet" type="text/css" />
-<style>
-body {
-	margin: 10px;
-}
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <link
+      href="{{url_for('static',filename='layui/css/layui.css')}}"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <style>
+      body {
+        margin: 10px;
+      }
 
-.demo-carousel {
-	height: 200px;
-	line-height: 200px;
-	text-align: center;
-}
-</style>
-
-</head>
-<body>
-	<div class="layui-row">
-		<fieldset class="layui-elem-field site-demo-button"
-			style="margin-top: 20px; margin-left: 20px; width: 95%;">
-			<legend>Test case of Random_rw scenario</legend>
-			<form class="layui-form" action="" >
-				<div class="layui-form-item">
-					<label class="layui-form-label">fio_runtime</label>
-					<div class="layui-input-inline">
-						<input type="text" placeholder="选填" name="fio_runtime"
-							autocomplete="off" class="layui-input">
-					</div>
-					<label class="layui-form-label">run_count</label>
-					<div class="layui-input-inline">
-						<input type="text" placeholder="选填" name="run_count"
-							autocomplete="off" class="layui-input" lay-verify="not_require_number">
-					</div>
-					<label class="layui-form-label">table_name</label>
-					<div class="layui-input-inline">
-						<input type="text" placeholder="选填" name="table_name"
-							autocomplete="off" class="layui-input">
-					</div>
-				</div>
-				<div class="layui-form-item">
-					<div class="layui-inline">
-						<label class="layui-form-label">device_type</label>
-						<div class="layui-input-inline">
-							<select name="device_type">
-								<option value="block" selected >block</option>
-								<option value="filesystem">filesystem</option>
-							</select>
-						</div>
-					</div>
-				</div>
-				<div class="layui-form-item">
-					<label class="layui-form-label">device_fs</label>
-					<div class="layui-input-inline">
-						<textarea placeholder="请输入正确值" name="device_fs" class="layui-textarea" lay-verify="required"></textarea>
-					</div>
-				</div>
-				<div class="layui-form-item">
-					<label class="layui-form-label">DB_IP</label>
-					<div class="layui-input-inline">
-						<input type="text" placeholder="请输入正确值" name="DB_IP"
-							autocomplete="off" class="layui-input" lay-verify="required|ip">
-					</div>
-					<label class="layui-form-label">DB_port</label>
-					<div class="layui-input-inline">
-						<input type="text" placeholder="请输入正确值" name="DB_port"
-							autocomplete="off" class="layui-input" lay-verify="required|number">
-					</div>
-				</div>
-				<div class="layui-form-item">
-					<label class="layui-form-label">test_node_IP</label>
-					<div class="layui-input-inline">
-						<input type="text" placeholder="请输入正确值" name="test_node_IP"
-							autocomplete="off" class="layui-input" lay-verify="required|ip">
-					</div>
-					<label class="layui-form-label">test_node_username</label>
-					<div class="layui-input-inline">
-						<input type="text" placeholder="请输入正确值" name="test_node_username"
-							autocomplete="off" class="layui-input" lay-verify="required">
-					</div>
-					<label class="layui-form-label">test_node_password</label>
-					<div class="layui-input-inline">
-						<input type="text" placeholder="请输入正确值" name="test_node_password"
-							autocomplete="off" class="layui-input" lay-verify="required">
-					</div>
-				</div>
-				<div class="layui-form-item">
-					<div class="layui-input-block">
-						<button type="submit" class="layui-btn" lay-filter="randomRW" lay-submit>Create</button>
-					</div>
-				</div>
-			</form>
-		</fieldset>
-	</div>
-	<div class="layui-row"
-		style="margin-top: 20px; margin-left: 20px; margin-right: 20px;">
-		<div class="layui-col-xs12">
-			<div class="grid-demo grid-demo-bg1">
-				<table class="layui-hide" id="performance" ></table>
-			</div>
-		</div>
-	</div>
-<script type="text/javascript"
-	src="{{url_for('static',filename='personal/js/JQuery.js')}}"></script>
-<script src="{{ url_for('static',filename='layui/layui.all.js') }}"></script>
-<script type="text/javascript"
-	src="{{url_for('static',filename='personal/js/basic-sundry.js')}}"></script>
-<script type="text/javascript"
-	src="{{url_for('static',filename='personal/js/random-rw.js')}}"></script>
-</body>
+      .demo-carousel {
+        height: 200px;
+        line-height: 200px;
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="layui-row">
+      <fieldset
+        class="layui-elem-field site-demo-button"
+        style="margin-top: 20px; margin-left: 20px; width: 95%;"
+      >
+        <legend>Test case of Random_rw scenario</legend>
+        <form class="layui-form" action="">
+          <div class="layui-form-item">
+            <label class="layui-form-label">fio_runtime</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="选填"
+                name="fio_runtime"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="not_require_number"
+              />
+            </div>
+            <label class="layui-form-label">run_count</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="选填"
+                name="run_count"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="not_require_number"
+              />
+            </div>
+            <label class="layui-form-label">table_name</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="选填"
+                name="table_name"
+                autocomplete="off"
+                class="layui-input"
+              />
+            </div>
+          </div>
+          <div class="layui-form-item">
+            <div class="layui-inline">
+              <label class="layui-form-label">device_type</label>
+              <div class="layui-input-inline">
+                <select name="device_type">
+                  <option value="block" selected>block</option>
+                  <option value="filesystem">filesystem</option>
+                </select>
+              </div>
+            </div>
+          </div>
+          <div class="layui-form-item">
+            <label class="layui-form-label">device_fs</label>
+            <div class="layui-input-inline">
+              <textarea
+                placeholder="请输入正确值"
+                name="device_fs"
+                class="layui-textarea"
+                lay-verify="required"
+              ></textarea>
+            </div>
+          </div>
+          <div class="layui-form-item">
+            <label class="layui-form-label">DB_IP</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="DB_IP"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="required|ip"
+              />
+            </div>
+            <label class="layui-form-label">DB_port</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="DB_port"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="required|number"
+              />
+            </div>
+          </div>
+          <div class="layui-form-item">
+            <label class="layui-form-label">test_node_IP</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="test_node_IP"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="required|ip"
+              />
+            </div>
+            <label class="layui-form-label">test_node_username</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="test_node_username"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="required"
+              />
+            </div>
+            <label class="layui-form-label">test_node_password</label>
+            <div class="layui-input-inline">
+              <input
+                type="text"
+                placeholder="请输入正确值"
+                name="test_node_password"
+                autocomplete="off"
+                class="layui-input"
+                lay-verify="required"
+              />
+            </div>
+          </div>
+          <div class="layui-form-item">
+            <div class="layui-input-block">
+              <button
+                type="submit"
+                class="layui-btn"
+                lay-filter="randomRW"
+                lay-submit
+              >
+                Create
+              </button>
+            </div>
+          </div>
+        </form>
+      </fieldset>
+    </div>
+    <div
+      class="layui-row"
+      style="margin-top: 20px; margin-left: 20px; margin-right: 20px;"
+    >
+      <div class="layui-col-xs12">
+        <div class="grid-demo grid-demo-bg1">
+          <table class="layui-hide" id="performance"></table>
+        </div>
+      </div>
+    </div>
+    <script
+      type="text/javascript"
+      src="{{url_for('static',filename='personal/js/JQuery.js')}}"
+    ></script>
+    <script src="{{ url_for('static',filename='layui/layui.all.js') }}"></script>
+    <script
+      type="text/javascript"
+      src="{{url_for('static',filename='personal/js/basic-sundry.js')}}"
+    ></script>
+    <script
+      type="text/javascript"
+      src="{{url_for('static',filename='personal/js/random-rw.js')}}"
+    ></script>
+  </body>
 </html>
