add table of performance test, waiting for debugging and testing

--- a/mgt_app/performance/templates/video.html
+++ b/mgt_app/performance/templates/video.html
@@ -167,7 +167,16 @@
     >
       <div class="layui-col-xs12">
         <div class="grid-demo grid-demo-bg1">
-          <table class="layui-hide" id="performance"></table>
+          <table class="layui-hide" id="videoTableRI" lay-filter="videoTableRI"></table>
+        </div>
+        <div class="grid-demo grid-demo-bg1">
+          <table class="layui-hide" id="videoTableRM" lay-filter="videoTableRM"></table>
+        </div>
+        <div class="grid-demo grid-demo-bg1">
+          <table class="layui-hide" id="videoTableWI" lay-filter="videoTableWI"></table>
+        </div>
+        <div class="grid-demo grid-demo-bg1">
+          <table class="layui-hide" id="videoTableWM" lay-filter="videoTableWM"></table>
         </div>
       </div>
     </div>
