--- a/mgt_app/performance/templates/random-rw.html
+++ b/mgt_app/performance/templates/random-rw.html
@@ -167,7 +167,10 @@
     >
       <div class="layui-col-xs12">
         <div class="grid-demo grid-demo-bg1">
-          <table class="layui-hide" id="performance"></table>
+          <table class="layui-hide" id="randomRWTableRI" lay-filter="randomRWTableRI"></table>
+        </div>
+        <div class="grid-demo grid-demo-bg1">
+          <table class="layui-hide" id="randomRWTableRM" lay-filter="randomRWTableRM"></table>
         </div>
       </div>
     </div>
