--- a/mgt_app/performance/templates/self-defined.html
+++ b/mgt_app/performance/templates/self-defined.html
@@ -201,7 +201,11 @@
     >
       <div class="layui-col-xs12">
         <div class="grid-demo grid-demo-bg1">
-          <table class="layui-hide" id="selfDefinedTable" lay-filter="selfDefinedTable"></table>
+          <table
+            class="layui-hide"
+            id="selfDefinedTable"
+            lay-filter="selfDefinedTable"
+          ></table>
         </div>
       </div>
     </div>
