--- a/mgt_app/templates/index.html
+++ b/mgt_app/templates/index.html
@@ -1,160 +1,187 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1, maximum-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, maximum-scale=1"
+    />
     <title>VersaTST</title>
-    <link href="{{url_for('static',filename='layui/css/layui.css')}}"
-          rel="stylesheet" type="text/css"/>
+    <link
+      href="{{url_for('static',filename='layui/css/layui.css')}}"
+      rel="stylesheet"
+      type="text/css"
+    />
     <style>
-.layui-side-scroll {
-	width: 100%;
-}
+      .layui-side-scroll {
+        width: 100%;
+      }
 
-.layui-nav-tree {
-	width: 100%;
-}
+      .layui-nav-tree {
+        width: 100%;
+      }
 
-.layui-layout-admin .layui-header {
-	z-index: 999999;
-}
+      .layui-layout-admin .layui-header {
+        z-index: 999999;
+      }
 
-.layui-layout-admin .layui-footer {
-	z-index: 9999;
-}
+      .layui-layout-admin .layui-footer {
+        z-index: 9999;
+      }
 
-.layui-layout-admin .layui-side {
-	width: 15%;
-}
+      .layui-layout-admin .layui-side {
+        width: 15%;
+      }
 
-.layui-layout-admin .layui-footer {
-	left: 15%;
-}
-
+      .layui-layout-admin .layui-footer {
+        left: 15%;
+      }
     </style>
-</head>
+  </head>
 
-<body class="layui-layout-body ">
-<div class="layui-layout layui-layout-admin ">
-    <div class="layui-header ">
+  <body class="layui-layout-body ">
+    <div class="layui-layout layui-layout-admin ">
+      <div class="layui-header ">
         <div class="layui-logo">VersaTST</div>
-    </div>
-    <div class="gy_wrap1">
+      </div>
+      <div class="gy_wrap1">
         <div class="layui-side layui-bg-black">
-            <div class="layui-side-scroll">
-                <div title="菜单缩放" class="kit-side-fold">
-                    <i class="fa fa-navicon" aria-hidden="true"></i>
-                </div>
-                <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-                <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                    <!-- 图片区，后续自行添加 -->
-<!--                    <li><a href="javascript:;"><img class="logo"-->
-<!--                        src="images/logo.png" alt=""></a></li>-->
-                    <li class="layui-nav-item ">
-                        <a class="title" ><span>Performance Test</span></a>
-                        <dl class="layui-nav-child">
-                            <dd>
-                                <a onclick="selectItem(this)" id="self_defined">Self_defined scenario</a>
-                            </dd>
-                            <dd>
-                                <a onclick="selectItem(this)" id="seq_rw">Seq_rw scenario</a>
-                            </dd>
-                            <dd>
-                                <a onclick="selectItem(this)" id="video">Video scenario</a>
-                            </dd>
-                            <dd>
-                                <a onclick="selectItem(this)" id="random_rw">Random_rw scenario</a>
-                            </dd>
-                        </dl>
-                    </li>
-                    <li class="layui-nav-item ">
-                        <a class="title" ><span>Reliability Test</span></a>
-                        <dl class="layui-nav-child">
-                        </dl>
-                    </li>
-                </ul>
+          <div class="layui-side-scroll">
+            <div title="菜单缩放" class="kit-side-fold">
+              <i class="fa fa-navicon" aria-hidden="true"></i>
             </div>
+            <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
+            <ul class="layui-nav layui-nav-tree" lay-filter="test">
+              <!-- 图片区，后续自行添加 -->
+              <!--                    <li><a href="javascript:;"><img class="logo"-->
+              <!--                        src="images/logo.png" alt=""></a></li>-->
+              <li class="layui-nav-item ">
+                <a class="title"><span>Performance Test</span></a>
+                <dl class="layui-nav-child">
+                  <dd>
+                    <a onclick="selectItem(this)" id="self_defined"
+                      >Self_defined scenario</a
+                    >
+                  </dd>
+                  <dd>
+                    <a onclick="selectItem(this)" id="seq_rw"
+                      >Seq_rw scenario</a
+                    >
+                  </dd>
+                  <dd>
+                    <a onclick="selectItem(this)" id="video">Video scenario</a>
+                  </dd>
+                  <dd>
+                    <a onclick="selectItem(this)" id="random_rw"
+                      >Random_rw scenario</a
+                    >
+                  </dd>
+                </dl>
+              </li>
+              <li class="layui-nav-item ">
+                <a class="title"><span>Reliability Test</span></a>
+                <dl class="layui-nav-child"></dl>
+              </li>
+            </ul>
+          </div>
         </div>
         <div class="layui-body"></div>
-    </div>
-    <div class="fourteen wide stretched column" id="mainpage">
+      </div>
+      <div class="fourteen wide stretched column" id="mainpage">
         <iframe
-                style="border: 0; width: 85%; min-height: 85%; margin-left: 15%; max-width: 1700px; position: absolute; z-index: 9999;"
-                src="/index/preview" frameborder="0" scrolling="auto"
-                id="iframecontend"></iframe>
+          style="border: 0; width: 85%; min-height: 85%; margin-left: 15%; max-width: 1700px; position: absolute; z-index: 9999;"
+          src="/index/preview"
+          frameborder="0"
+          scrolling="auto"
+          id="iframecontend"
+        ></iframe>
         <!-- src里面可以放主页网址 -->
-    </div>
-    <div class="layui-footer">
+      </div>
+      <div class="layui-footer">
         <!-- 底部固定区域 -->
         © feixitek.com
+      </div>
     </div>
-</div>
-<script type="text/javascript"
-        src="{{url_for('static',filename='personal/js/JQuery.js')}}"></script>
-<script type="text/javascript"
-        src="{{url_for('static',filename='layui/layui.all.js')}}"></script>
-<script type="text/javascript">
-    function selectItem(obj) {
-        $('.active.item').removeClass("active");
-        obj.className += " active";
-        if(obj.id=='self_defined'){
-            $('#mainpage iframe').attr('src',"/performance/self-defined");
-            $('#mainpage iframe').css({ "margin-left": "15%","max-width":"1700px"});
-        }else if(obj.id=='seq_rw'){
-            $('#mainpage iframe').attr('src',"/performance/seq-rw");
-            $('#mainpage iframe').css({ "margin-left": "15%","max-width":"1700px"});
-        }else if(obj.id=='video'){
-            $('#mainpage iframe').attr('src',"/performance/video");
-            $('#mainpage iframe').css({ "margin-left": "15%","max-width":"1700px"});
-        }else if(obj.id=='random_rw'){
-            $('#mainpage iframe').attr('src',"/performance/random-rw");
-            $('#mainpage iframe').css({ "margin-left": "15%","max-width":"1700px"});
+    <script
+      type="text/javascript"
+      src="{{url_for('static',filename='personal/js/JQuery.js')}}"
+    ></script>
+    <script
+      type="text/javascript"
+      src="{{url_for('static',filename='layui/layui.all.js')}}"
+    ></script>
+    <script type="text/javascript">
+      function selectItem (obj) {
+        $('.active.item').removeClass('active')
+        obj.className += ' active'
+        if (obj.id == 'self_defined') {
+          $('#mainpage iframe').attr('src', '/performance/self-defined')
+          $('#mainpage iframe').css({
+            'margin-left': '15%',
+            'max-width': '1700px'
+          })
+        } else if (obj.id == 'seq_rw') {
+          $('#mainpage iframe').attr('src', '/performance/seq-rw')
+          $('#mainpage iframe').css({
+            'margin-left': '15%',
+            'max-width': '1700px'
+          })
+        } else if (obj.id == 'video') {
+          $('#mainpage iframe').attr('src', '/performance/video')
+          $('#mainpage iframe').css({
+            'margin-left': '15%',
+            'max-width': '1700px'
+          })
+        } else if (obj.id == 'random_rw') {
+          $('#mainpage iframe').attr('src', '/performance/random-rw')
+          $('#mainpage iframe').css({
+            'margin-left': '15%',
+            'max-width': '1700px'
+          })
         }
-    }
-</script>
-<script>
-    //JavaScript代码区域
-    layui.use('element', function(){
-        var element = layui.element;
-    });
-    var isShow = true;  //定义一个标志位
-    $('.kit-side-fold').click(function(){
+      }
+    </script>
+    <script>
+      //JavaScript代码区域
+      layui.use('element', function () {
+        var element = layui.element
+      })
+      var isShow = true //定义一个标志位
+      $('.kit-side-fold').click(function () {
         //选择出所有的span，并判断是不是hidden
-        $('.layui-nav-item span').each(function(){
-            if($(this).is(':hidden')){
-                $(this).show();
-            }else{
-                $(this).hide();
-            }
-        });
+        $('.layui-nav-item span').each(function () {
+          if ($(this).is(':hidden')) {
+            $(this).show()
+          } else {
+            $(this).hide()
+          }
+        })
         //判断isshow的状态
-        if(isShow){
-            $('.layui-side.layui-bg-black').width(60); //设置宽度
-            $('.kit-side-fold i').css('margin-right', '70%');  //修改图标的位置
-            //将footer和body的宽度修改
-            $('.layui-body').css('left', 60+'px');
-            $('.layui-footer').css('left', 60+'px');
-            //将二级导航栏隐藏
-            $('dd span').each(function(){
-                $(this).hide();
-            });
-            //修改标志位
-            isShow =false;
-        }else{
-            $('.layui-side.layui-bg-black').width(200);
-            $('.kit-side-fold i').css('margin-right', '10%');
-            $('.layui-body').css('left', 200+'px');
-            $('.layui-footer').css('left', 200+'px');
-            $('dd span').each(function(){
-                $(this).show();
-            });
-            isShow =true;
+        if (isShow) {
+          $('.layui-side.layui-bg-black').width(60) //设置宽度
+          $('.kit-side-fold i').css('margin-right', '70%') //修改图标的位置
+          //将footer和body的宽度修改
+          $('.layui-body').css('left', 60 + 'px')
+          $('.layui-footer').css('left', 60 + 'px')
+          //将二级导航栏隐藏
+          $('dd span').each(function () {
+            $(this).hide()
+          })
+          //修改标志位
+          isShow = false
+        } else {
+          $('.layui-side.layui-bg-black').width(200)
+          $('.kit-side-fold i').css('margin-right', '10%')
+          $('.layui-body').css('left', 200 + 'px')
+          $('.layui-footer').css('left', 200 + 'px')
+          $('dd span').each(function () {
+            $(this).show()
+          })
+          isShow = true
         }
-    });
-
-</script>
-<!-- 	<script type="text/javascript">
+      })
+    </script>
+    <!-- 	<script type="text/javascript">
 $("#LINSTOR_Create").click(function(){
     $.ajax({
         url:"/socket",
@@ -166,14 +193,12 @@ $("#LINSTOR_Create").click(function(){
 });
 
 </script> -->
-<script type="text/javascript">
-layui.use(['tree','element'], function(){
-  var tree = layui.tree
-  ,element = layui.element;
-  //分类树
-});
-
-</script>
-
-</body>
+    <script type="text/javascript">
+      layui.use(['tree', 'element'], function () {
+        var tree = layui.tree,
+          element = layui.element
+        //分类树
+      })
+    </script>
+  </body>
 </html>
