Modify reliability test form title

--- a/mgt_app/reliability/templates/spof.html
+++ b/mgt_app/reliability/templates/spof.html
@@ -29,7 +29,7 @@
         class="layui-elem-field site-demo-button"
         style="margin-top: 20px; margin-left: 20px; width: 95%;"
       >
-        <legend>Test case of Seq_rw scenario</legend>
+        <legend>Test case of Spof scenario</legend>
         <form class="layui-form" action="">
           <div class="layui-form-item">
             <label class="layui-form-label">test_name</label>
