add tables of reliablity test page

--- a/mgt_app/reliability/templates/spof-pvc.html
+++ b/mgt_app/reliability/templates/spof-pvc.html
@@ -57,9 +57,9 @@
             <label class="layui-form-label">test_action</label>
             <div class="layui-input-inline">
               <select name="test_action">
-                <option value="node" selected>node</option>
-                <option value="switch">switch</option>
-                <option value="interface">interface</option>
+                <option value="node_down" selected>node_down</option>
+                <option value="switch_port_down">switch_port_down</option>
+                <option value="interface_down">interface_down</option>
                 <option value="manual">manual</option>
               </select>
             </div>
@@ -196,34 +196,13 @@
       style="margin-top: 20px; margin-left: 20px; margin-right: 20px;"
     >
       <div class="layui-col-xs12">
-        <!-- <div class="grid-demo grid-demo-bg1">
-          <table
-            class="layui-hide"
-            id="seqRWTableRI"
-            lay-filter="seqRWTableRI"
-          ></table>
-        </div>
         <div class="grid-demo grid-demo-bg1">
           <table
             class="layui-hide"
-            id="seqRWTableRM"
-            lay-filter="seqRWTableRM"
+            id="spofPVCTable"
+            lay-filter="spofPVCTable"
           ></table>
         </div>
-        <div class="grid-demo grid-demo-bg1">
-          <table
-            class="layui-hide"
-            id="seqRWTableWI"
-            lay-filter="seqRWTableWI"
-          ></table>
-        </div>
-        <div class="grid-demo grid-demo-bg1">
-          <table
-            class="layui-hide"
-            id="seqRWTableWM"
-            lay-filter="seqRWTableWM"
-          ></table>
-        </div> -->
       </div>
     </div>
     <script
