Modify pages of Reliability Test, according to the test_action to display the text box

--- a/mgt_app/performance/templates/random-rw.html
+++ b/mgt_app/performance/templates/random-rw.html
@@ -147,11 +147,11 @@
             </div>
           </div>
           <div class="layui-form-item">
-            <div class="layui-input-block">
+            <div class="layui-btn-container">
               <button
                 type="submit"
-                class="layui-btn"
-                lay-filter="randomRW"
+                class="layui-btn layui-btn-fluid layui-btn-radius"
+                lay-filter="spof"
                 lay-submit
               >
                 Create
