--- a/mgt_app/performance/templates/self-defined.html
+++ b/mgt_app/performance/templates/self-defined.html
@@ -180,17 +180,15 @@
             </div>
           </div>
           <div class="layui-form-item">
-            <div class="layui-input-block">
-              <button
-                type="submit"
-                class="layui-btn"
-                lay-filter="selfDefined"
-                lay-submit
-              >
-                Create
-              </button>
-              <!--						<button type="reset" class="layui-btn" >重置</button>-->
-            </div>
+            <button
+              type="submit"
+              class="layui-btn layui-btn-fluid layui-btn-radius"
+              lay-filter="spof"
+              lay-submit
+            >
+              Create
+            </button>
+            <!--						<button type="reset" class="layui-btn" >重置</button>-->
           </div>
         </form>
       </fieldset>
