--- a/mgt_app/performance/templates/video.html
+++ b/mgt_app/performance/templates/video.html
@@ -147,16 +147,14 @@
             </div>
           </div>
           <div class="layui-form-item">
-            <div class="layui-input-block">
-              <button
-                type="submit"
-                class="layui-btn"
-                lay-filter="video"
-                lay-submit
-              >
-                Create
-              </button>
-            </div>
+            <button
+              type="submit"
+              class="layui-btn layui-btn-fluid layui-btn-radius"
+              lay-filter="spof"
+              lay-submit
+            >
+              Create
+            </button>
           </div>
         </form>
       </fieldset>
