modify verify of waiting_time on reliability page

--- a/mgt_app/reliability/templates/spof-pvc.html
+++ b/mgt_app/reliability/templates/spof-pvc.html
@@ -153,7 +153,7 @@
                 name="waiting_time"
                 autocomplete="off"
                 class="layui-input"
-                lay-verify="number"
+                lay-verify="not_require_number"
               />
             </div>
           </div>
