--- a/mgt_app/reliability/templates/spof.html
+++ b/mgt_app/reliability/templates/spof.html
@@ -129,7 +129,7 @@
                 name="waiting_time"
                 autocomplete="off"
                 class="layui-input"
-                lay-verify="number"
+                lay-verify="not_require_number"
               />
             </div>
           </div>
